--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,9 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Plaisir de conduire!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
+        <title>{% block title %}Plaisir de conduire !{% endblock %}</title>
+        {% block stylesheets %}
+            <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.css">
+            <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+        {% endblock %}    </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
