--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,5 +1,14 @@
 {% extends "base.html.twig" %}
 
+        {% block stylesheets %}
+            <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.css">
+            <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+        {% endblock %}
+
 {% block body %}
-    <h1>Accueil</h1>
+
+
+
+
 {% endblock %}
