--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -8,7 +8,21 @@
 
 {% block body %}
 
-
+ <div class="header">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ml-auto mr-auto">
+            <a class="nav-link active" href="#">Accueil <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Voitures</a>
+            <a class="nav-link" href="#">Motos</a>
+            </div>
+        </div>
+    </nav>
+  </div>
 
 
 {% endblock %}
