--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -11,18 +11,19 @@
  <div class="header">
     <nav class="navbar navbar-expand-lg">
 
-        <img src="{{ asset('images/_logo.png') }}" id="logo">                
+        <img src="{{ asset('images/logo_size.jpg') }}" id="logo">                
         {# <a class="navbar-brand" href="#">Navbar</a> #}
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" id="openNavbar" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">_</span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto mr-auto">
-            <a class="nav-link active menu01" href="#">Accueil <span class="sr-only">(current)</span></a>
+            <div class="navbar-nav mr-auto">
+            <a class="nav-link active menu01" href="/">Accueil</a>
             <a class="nav-link" href="#">Voitures</a>
             <a class="nav-link" href="#">Motos</a>
+            <a class="nav-link" href="/test">TEST</a>
             </div>
         </div>
 
@@ -30,4 +31,13 @@
   </div>
 
 
+
+
 {% endblock %}
+        {% block javascripts %}
+            <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+            <script src="{{ asset('js/app.js') }}"></script>
+        {% endblock %}
