--- a/templates/test.html.twig
+++ b/templates/test.html.twig
@@ -53,49 +53,24 @@ body {
 <body>
 
 
- <div class="header">
-    <nav class="navbar navbar-expand-lg">
-
-        <img src="{{ asset('images/logo_size.jpg') }}" id="logo">                
-        {# <a class="navbar-brand" href="#">Navbar</a> #}
-
-        <button class="navbar-toggler" id="openNavbar" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">_</span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav mr-auto">
-            <a class="nav-link active menu01" href="/">Accueil</a>
-            <a class="nav-link" href="#">Voitures</a>
-            <a class="nav-link" href="#">Motos</a>
-            <a class="nav-link" href="/test">TEST</a>
-            </div>
-        </div>
-
-    </nav>
-  </div>
-
-
 <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times; blablabla</a>
   <a href="#">About</a>
   <a href="#">Services</a>
   <a href="#">Clients</a>
   <a href="#">Contact</a>
 </div>
 
-<h2>Animated Sidenav Example Full Width</h2>
-<p>Click on the element below to open the navigation menu.</p>
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 
 <script>
-function openNav() {
-  document.getElementById("mySidenav").style.width = "100%";
-}
+  function openNav() {
+    document.getElementById("mySidenav").style.width = "100%";
+  }
 
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-}
+  function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+  }
 </script>
    
 </body>
