--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,40 +31,35 @@ a.nav-link:hover {
     border-radius:40%;
     position: relative;
     height: 30px;
-    border: 2px solid #408ec6;
-}
-
-/* MENU HAMBURGER */
-.closebtn {
-    font-size: 40px;
-    position: absolute;
-    top: 10px;
-    right: 20%;
-}
-.navbar-collapse {
-    height: 100%;
-    width: 0;
-    position: fixed;
+    border: 4x solid #408ec6;
     z-index: 1;
-    top: 0;
+}
+
+.show > .navbar-nav {
+    position: fixed;
+    height: 100%;
+    width: 100%;
     left: 0;
-    background-color: #1e2761;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    text-align: center;
+    top: 0;
+    background: #1e2761;
+    transition: all .5s;
 }
-.navbar--collapse a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;  
+.show.navbar-nav > .nav-link {
+    /* width: 100px; */
 }
-
-
-
-
-
-
+div.navbar-nav.mr-auto.open {
+    padding-top: 20%;
+}
+div.navbar-nav.mr-auto.open > .nav-link {
+    width: 300px;
+    margin: 0 auto;
+    position: relative;
+    margin-top: 28px;
+}
+div.navbar-nav.mr-auto.open > .nav-link:hover {
+    width: 300px;
+    margin: 0 auto;
+    position: relative;
+    margin-top: 28px;
+    background-color: wheat;
+}
