--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,18 @@
             <link rel="stylesheet" href="{{ asset('css/app.css') }}">
         {% endblock %}    </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+        
+        {% block footer %}
+        
+            <footer style="background-color:red;margin-top:60px; height:100px;width:100%;">
+
+            </footer>
+        
+        {% endblock %}
+        
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
