--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -9,7 +9,8 @@
 {% block body %}
 
  <div class="header">{# Menu #}
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg"> 
+        <img src="{{ asset('images/306019.svg') }}" id="voitureSvg">
 
         <img src="{{ asset('images/logo_size.jpg') }}" id="logo">                
         {# <h1 class="navbar-brand">Plaisir de Conduire</h1> #}
