--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,12 +5,12 @@
         <title>{% block title %}Plaisir de conduire !{% endblock %}</title>
         {% block stylesheets %}
             <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.css">
+            <link rel="stylesheet" href="https://bootswatch.com/sandstone/">
             <link rel="stylesheet" href="{{ asset('css/app.css') }}">
         {% endblock %}    </head>
     <body>
         {% block body %}
-        
+            <a href="" class="btn btn-primary">Voitures</a>
         
         {% block footer %}
         
@@ -22,5 +22,8 @@
         
         {% endblock %}
         {% block javascripts %}{% endblock %}
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </body>
 </html>
